# ShadowCorp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: main..py  main.py
app/annonymizer/: detector.py  dp.py  transofmer.py
app/anonymizer/: detector.py  dp.py  modelo_diagnostico.joblib  train_model.py  transformer.py
app/api/v1/: routes.py
app/tests/: test_annonymizer.py
example_data/: sample_input.json
